--- a/v2/dest/assets/css.sass/modules/_slick-theme.scss
+++ b/v2/dest/assets/css.sass/modules/_slick-theme.scss
@@ -11,7 +11,7 @@ $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
-$slick-dot-color: black !default;
+$slick-dot-color: #333 !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
@@ -70,11 +70,8 @@ $slick-opacity-not-active: 0.25 !default;
     font-size: 0px;
     cursor: pointer;
     background: #E2E2E2;
-    bottom: -40px;
+    bottom: 0px;
     right: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
     padding: 0;
     border: none;
     border-radius: $bg_borderRadius;
@@ -88,7 +85,7 @@ $slick-opacity-not-active: 0.25 !default;
         // }
     }
     &.slick-disabled:before {
-        // opacity: $slick-opacity-not-active;
+        opacity: $slick-opacity-not-active;
     }
     &:before , &:after {
         content: "";
@@ -151,7 +148,7 @@ $slick-opacity-not-active: 0.25 !default;
 
 .slick-dots {
     position: absolute;
-    bottom: -25px;
+    bottom: 20px;
     list-style: none;
     display: block;
     text-align: center;
@@ -206,4 +203,78 @@ $slick-opacity-not-active: 0.25 !default;
             opacity: $slick-opacity-default;
         }
     }
+}
+/**********************************************************************/
+/* sp home
+/**********************************************************************/
+@media only screen and (max-width:768px){
+    .slick-prev,
+    .slick-next {
+        position: absolute;
+        display: block;
+        width: 42vw;
+        height: 40px;
+        line-height: 0px;
+        font-size: 0px;
+        cursor: pointer;
+        background: #E2E2E2;
+        bottom: -60px;
+        right: 0;
+        padding: 0;
+        border: none;
+        border-radius: $sp_bg_borderRadius;
+        outline: none;
+        &:hover, &:focus {
+            outline: none;
+        }
+        &:before , &:after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            width: 10px;
+            height: 2px;
+            background:#888;
+            border-radius: 2px;
+            transition:transform 0.3s ease-in-out;
+        }    
+    }
+    
+    .slick-prev {
+        left: 0px;
+        &:before{
+            transform:translate(0,-7px) rotate(-45deg); 
+        }
+        &:after{
+            transform:translate(0px, 7px) rotate(45deg); 
+        }
+    }
+    
+    .slick-next {
+        right: 0px;
+        &:before{
+            transform:translate(0,-7px) rotate(45deg); 
+        }
+        &:after{
+            transform:translate(0px, 7px) rotate(-45deg); 
+        }
+    }
+    
+    .slick-prev:hover {
+        &:before{
+            transform:translate(0,-3px) rotate(-45deg); 
+        }
+        &:after{
+            transform:translate(0px, 3px) rotate(45deg); 
+        }
+    }
+    .slick-next:hover {
+        &:before{
+            transform:translate(0,-3px) rotate(45deg); 
+        }
+        &:after{
+            transform:translate(0px, 3px) rotate(-45deg); 
+        }
+    } 
 }
