--- a/v2/dest/assets/css.sass/modules/_common.scss
+++ b/v2/dest/assets/css.sass/modules/_common.scss
@@ -391,45 +391,9 @@ a:visited{
     display: block;
 }
 
-/**********************************************************************/
-/* pc common dark
-/**********************************************************************/
-body.is-dark{
-    background-color: var(--body_darkColor);
-
-    #loading_overray{
-        background: #1A1A1A;
-        z-index: 10;
-        font-size: 1.4rem;
-    }
-    #loading_overray .bg{
-        background: #333;
-      }
-    #load div {
-        color: #fff;
-    }
-      
-    .toggleSwitch{
-        span.labeltxt{
-            background:var(--darkColor);
-            border-radius: 14px;
-            border: 1px solid #ffffff;
-            position: relative;     
-        }
-        span.labeltxt:before{
-            opacity: 0;
-        }
-        span.labeltxt:after{
-            opacity: 1;
-            color: #fff;
-            content: "dark";
-            margin-right: 1.5rem;
-        }
-        span.handle{
-            left: calc(80px - 24px);
-        }
-    }
-}
+//--------------------------
+// #backTonavi
+//--------------------------
 #backTonavi{
     display: block;
     position: relative;
@@ -527,11 +491,50 @@ body.is-dark{
     }
 }
 
+
+/**********************************************************************/
+/* pc common dark
+/**********************************************************************/
+body.is-dark{
+    background-color: var(--body_darkColor);
+
+    #loading_overray{
+        background: #1A1A1A;
+        z-index: 10;
+        font-size: 1.4rem;
+    }
+    #loading_overray .bg{
+        background: #333;
+      }
+    #load div {
+        color: #fff;
+    }
+      
+    .toggleSwitch{
+        span.labeltxt{
+            background:var(--darkColor);
+            border-radius: 14px;
+            border: 1px solid #ffffff;
+            position: relative;     
+        }
+        span.labeltxt:before{
+            opacity: 0;
+        }
+        span.labeltxt:after{
+            opacity: 1;
+            color: #fff;
+            content: "dark";
+            margin-right: 1.5rem;
+        }
+        span.handle{
+            left: calc(80px - 24px);
+        }
+    }
+}
+
 /**********************************************************************/
 /* sp common
 /**********************************************************************/
-
-
 @media only screen and (max-width:768px){
     .responsive-reaction{
         width: 0;
@@ -547,5 +550,15 @@ body.is-dark{
         top: 20px;
         right: 20px;
     }
-    
+    #backTonavi{
+        margin-top: 20px;
+        a{
+            width: 100%;
+            height: 100px;
+            border-radius: $sp_bg_borderRadius;
+            span{
+                padding-top: calc(100px / 2 + 14px);
+            }
+        }
+    }
 }
